# openasr

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGMENTS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HANDOFF.md  NOTICE  README.md  README.zh-CN.md  RELEASING.md  SECURITY.md  clippy.toml  compose.yaml  deny.toml  install.sh
crates/openasr-cli/: Cargo.toml
crates/openasr-cli/src/: bench_suite_cli.rs  catalog_cli.rs  cli_args.rs  consent.rs  doctor_cli.rs  live.rs  main.rs  model_pack_cli.rs  native_segment_cli.rs  parent_watchdog.rs  progress.rs  pull_cli.rs
crates/openasr-cli/tests/: cli.rs  removed_surface.rs
crates/openasr-client/: Cargo.toml
crates/openasr-client/src/: lib.rs
crates/openasr-core/: Cargo.toml  build.rs  catalog-series.toml
crates/openasr-core/examples/: pack_qwen3_forced_aligner.rs
crates/openasr-core/src/: adapter_pack.rs  apikeys.rs  atomic_file.rs  audio.rs  backend_manifest.rs  backends_manifest_security.rs  batch.rs  batch_tests.rs  capability_pack.rs  catalog_security.rs  catalog_series.rs  config.rs  config_tests.rs  default_selection.rs  default_selection_tests.rs  download_source.rs  home.rs  host.rs  hotword.rs  http.rs  launch_pack.rs  lib.rs  models.rs  output.rs  output_atomic.rs  output_path.rs  pull.rs  pull_tests.rs  registry.rs  remote_compute.rs  safety.rs  stage_timing.rs  testing.rs
crates/openasr-core/src/api/: audio_io.rs  mod.rs  native.rs  streaming.rs  streaming_tests.rs
crates/openasr-core/src/api/backend/: cue_segmentation.rs  mock.rs  mod.rs  native.rs  native_model_id.rs  native_path.rs  native_transcribe.rs  request_context.rs  transcription_control.rs
crates/openasr-core/src/api/native/: errors.rs  streaming.rs  tests.rs  traits.rs  transcript_emitter.rs  types.rs
crates/openasr-core/src/arch/: block_stack.rs  hparams.rs  mod.rs  shape_orchestrator.rs
crates/openasr-core/src/audio/: decode.rs  errors.rs  opus_decode.rs  prepare.rs  probe.rs  symphonia_decode.rs  tests.rs  types.rs  validation.rs
crates/openasr-core/src/benchmark/: mod.rs  suite.rs
crates/openasr-core/src/device/: capabilities.rs  capabilities_cpu_facts.rs  capabilities_diagnostics.rs  capabilities_fallback_trace.rs  capabilities_provider_availability.rs  compute_devices.rs  mod.rs  types.rs
crates/openasr-core/src/diarize/: attribution.rs  calibration.rs  clustering.rs  contract.rs  debug.rs  enrollment.rs  mod.rs  pack.rs  pipeline.rs  streaming.rs
crates/openasr-core/src/format/: json.rs  mod.rs  renderers.rs  tests.rs
crates/openasr-core/src/ggml_runtime/: arena_weight_pipeline.rs  backend.rs  cpu_graph.rs  env_flags.rs  ffi.rs  gguf_c_parser_sandbox.rs  gguf_metadata.rs  gguf_tensor_data.rs  gguf_tensor_index.rs  gguf_write.rs  mod.rs  package_probe.rs  runtime_source.rs
crates/openasr-core/src/longform/: assembler.rs  mod.rs  options.rs  slicing.rs  timeline.rs  vad.rs
crates/openasr-core/src/metrics/: mod.rs  peak_rss.rs  wer.rs
crates/openasr-core/src/models/: aux_pack_registry.rs  builtin_execution_dispatch.rs  ctc_greedy_decode.rs  ctc_prefix_beam.rs  ctc_streaming_driver.rs  decode_policy_component_registry.rs  decode_token_history.rs  diarize_pack_import.rs  executor_component_registry.rs  frame_sync_streaming_driver.rs  frontend_component_registry.rs  ggml_asr_executor.rs  ggml_composed_executor.rs  ggml_family_adapter.rs  ggml_family_registry.rs  ggml_graph_config.rs  ggml_streaming_audio.rs  ggml_streaming_executor.rs  ggml_streaming_session.rs  gpt2_bpe.rs  graph_runtime_config.rs  incremental_streaming_driver.rs  kaldi_fbank.rs  language.rs  local_source_import.rs  lora_adapter.rs  oasr_metadata.rs  pack_quant.rs  phrase_bias_decode.rs  prepared_runtime_cache.rs  runtime_asset_bootstrap.rs  runtime_component_bootstrap.rs  runtime_contract.rs  runtime_preflight.rs  runtime_prepared_registry.rs  runtime_selection_metadata.rs  runtime_tensor_contract_registry.rs  runtime_weight_component_registry.rs  safetensors_json.rs  sentencepiece_word_timestamps.rs  (+12 more)
crates/openasr-core/src/nn/: attn.rs  conv.rs  decoder.rs  encoder.rs  ffn.rs  half.rs  mod.rs  norm.rs  wav2vec2.rs
crates/openasr-core/src/punctuation/: mod.rs
crates/openasr-core/src/realtime/: audio.rs  backend.rs  buffer.rs  buffer_helpers.rs  capture.rs  events.rs  history.rs  history_export.rs  history_sort.rs  history_state.rs  history_store.rs  history_subtitle.rs  history_text.rs  mod.rs  session.rs  transcript.rs  transcript_apply.rs  transcript_state.rs  vad.rs  wire_bindings_test.rs
crates/openasr-core/src/registry/: resolution.rs  tests.rs  validation.rs
crates/openasr-core/src/tensor/: layout.rs  linear.rs  mod.rs  owned.rs  view.rs
crates/openasr-core/src/translation/: clause.rs  gating.rs  mod.rs  queue.rs  session.rs
crates/openasr-core/tests/: hotword_real_speech_effectiveness.rs  moonshine_adapter_oadp.rs  quant_tag_contract.rs
crates/openasr-core/tests/fixtures/: malformed_vint_zero.webm  quant_tag_cases.json  tone.opus  tone_heaac.m4a  tone_mono.flac  tone_mono.m4a  tone_mono.qta  tone_mono_alac.m4a  tone_mono_opus.webm  tone_stereo.webm
crates/openasr-ffi/: Cargo.toml  cbindgen.toml
crates/openasr-ffi/include/: openasr.h
crates/openasr-ffi/src/: lib.rs  market.rs
crates/openasr-server/: Cargo.toml
crates/openasr-server/src/: http_wire_bindings_test.rs  idle_activity.rs  lib.rs  model_admission.rs  tests.rs
crates/openasr-server/src/realtime/: mod.rs  native_worker.rs  tests.rs  ws_session.rs
crates/openasr-server/src/routes/: config.rs  history.rs  mod.rs  models_api.rs  pairing.rs  pull_jobs.rs  speakers.rs  transcription.rs  translation.rs
crates/openasr-server/tests/: api.rs
crates/openasr-system-audio/: Cargo.toml
crates/openasr-system-audio/src/: lib.rs  linux.rs  macos.rs  pcm.rs  smoke_test_support.rs  stub.rs  windows.rs
tooling/system-audio-check/: Cargo.toml
tooling/system-audio-check/scripts/: run_platform_smoke.ps1  run_platform_smoke.sh
tooling/system-audio-check/src/: lib.rs
(+529 files in other folders)
