[workspace]
members = [
    "crates/openasr-cli",
    "crates/openasr-client",
    "crates/openasr-core",
    "crates/openasr-ffi",
    "crates/openasr-server",
    "crates/openasr-system-audio",
]
resolver = "2"

[workspace.package]
version = "0.1.12"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/QuintinShaw/openasr"
rust-version = "1.95"
publish = false
authors = ["OpenASR contributors"]

[workspace.dependencies]
# Inter-crate deps are path-only (no crates.io publish, no `version = ".."`
# pin to maintain): every member crate inherits its version from
# [workspace.package] via `version.workspace = true`, so a release bump only
# ever touches that one field (see scripts/bump-version.sh, RELEASING.md).
openasr-core = { path = "crates/openasr-core" }
openasr-server = { path = "crates/openasr-server" }
openasr-system-audio = { path = "crates/openasr-system-audio" }
anyhow = "1.0"
assert_cmd = "2.0"
axum = { version = "0.8", features = ["multipart", "ws"] }
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"
cpal = { version = "0.17.3", default-features = false }
ed25519-dalek = { version = "2.2", default-features = false, features = ["std"] }
futures-util = "0.3"
libc = "0.2"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemInformation", "Win32_System_ProcessStatus", "Win32_Storage_FileSystem"] }
matrixmultiply = "0.3"
memmap2 = "0.9"
metal = "0.33"
mime = "0.3"
objc = "0.2"
predicates = "3.1"
rayon = "1.10"
rcgen = "0.12"
realfft = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
# In-process audio decoding for non-WAV inputs (m4a/AAC-LC, mp3, flac,
# ogg/vorbis, wav): no default-features -- only the demuxers/decoders this
# workspace actually decodes are enabled, to keep the dependency tree and
# release binary small (see crates/openasr-core/src/audio/symphonia_decode.rs).
symphonia = { version = "0.5.4", default-features = false, features = ["isomp4", "aac", "mp3", "flac", "ogg", "vorbis", "wav", "pcm"] }
# Pure-Rust resampler used to bring decoded symphonia audio to the 16 kHz mono
# PCM the ASR pipeline expects.
rubato = "0.15"
# `bundled` compiles SQLite from source (with FTS5 unconditionally enabled by
# libsqlite3-sys' build script) so the daemon history store needs no system
# libsqlite3 -- matches the rest of this workspace's "vendor the native deps"
# posture (see ggml git submodule in openasr-core).
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.3"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
# rcgen's `CertificateParams::not_before`/`not_after` are `time::OffsetDateTime`;
# depended on directly (not just transitively via rcgen) to set an explicit,
# bounded validity window on generated self-signed TLS identities (see
# `openasr-server`'s `generate_self_signed_tls_material`).
time = "0.3"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-rustls = "0.26"
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect"] }
toml = "0.9"
tower = "0.5"
unicode-general-category = "1.1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
