[package]
name = "openasr-cli"
description = "Command-line interface for OpenASR: transcribe, live, serve, pull, and manage local speech-to-text models."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "openasr"
path = "src/main.rs"

[features]
default = ["mic-capture"]
## Accelerator backends — forwarded 1:1 to openasr-core so the binary can be
## built with GPU acceleration (e.g. `cargo build --features hip`).
cuda = ["openasr-core/cuda"]
vulkan = ["openasr-core/vulkan"]
hip = ["openasr-core/hip"]
sycl = ["openasr-core/sycl"]
openmp = ["openasr-core/openmp"]
native = ["openasr-core/native"]
## `live --source mic` support (cpal + platform audio backend, e.g. ALSA on
## Linux). Off by default only for the static musl release legs, which need a
## fully static binary and have no static libasound archive to link against
## (see release-binaries.yml musl matrix legs); `--source system` and
## `--input-file` stay available either way.
mic-capture = ["dep:cpal"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
cpal = { workspace = true, optional = true }
indicatif.workspace = true
openasr-core.workspace = true
openasr-server.workspace = true
openasr-system-audio.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
hound = "3.5"

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
# Enable the `testing` fixtures only for this crate's tests.
openasr-core = { workspace = true, features = ["testing"] }
predicates.workspace = true
tower.workspace = true
