[package]
name = "openasr-cli"
description = "Command-line interface for OpenASR: transcribe, live, serve, pull, and manage local speech-to-text models."
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "openasr"
path = "src/main.rs"

[features]
## Accelerator backends — forwarded 1:1 to openasr-core so the binary can be
## built with GPU acceleration (e.g. `cargo build --features hip`).
cuda = ["openasr-core/cuda"]
vulkan = ["openasr-core/vulkan"]
hip = ["openasr-core/hip"]
sycl = ["openasr-core/sycl"]
openmp = ["openasr-core/openmp"]
native = ["openasr-core/native"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
cpal.workspace = true
indicatif.workspace = true
openasr-core.workspace = true
openasr-server.workspace = true
openasr-system-audio.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
hound = "3.5"

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
# Enable the `testing` fixtures only for this crate's tests.
openasr-core = { workspace = true, features = ["testing"] }
predicates.workspace = true
tower.workspace = true
