[package]
name = "openasr-core"
description = "OpenASR engine: model families, ggml runtime, .oasr pack format, signed catalog, and local inference trust boundaries."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
## OpenMP CPU threading is ON by default (~2x CPU). On Windows the ggml CPU
## sources must be MSVC-compiled for OpenMP to link (ROCm clang's __kmpc_* has no
## libomp); build.rs pins MSVC `cl` for non-HIP Windows builds so this holds, and
## neutralizes hip+openmp (HIP needs ROCm clang). OPENASR_GGML_OPENMP=0 or
## --no-default-features disables it.
default = ["openmp"]
## GPU/accelerator backends — each maps 1:1 to a GGML cmake flag.
cuda    = []   # GGML_CUDA    — NVIDIA CUDA (requires CUDA toolkit)
vulkan  = []   # GGML_VULKAN  — Vulkan compute (cross-platform GPU)
hip     = []   # GGML_HIP     — AMD ROCm/HIP (requires ROCm toolkit)
sycl    = []   # GGML_SYCL    — Intel oneAPI SYCL (requires DPC++ compiler)
openmp  = []   # GGML_OPENMP  — multi-core CPU via OpenMP
## Build tuning
native  = []   # GGML_NATIVE  — tune for the current host CPU; off for distribution
## Test fixtures (`openasr_core::testing`). Off by default; workspace consumers
## enable it through dev-dependencies. The module is also available under
## `cfg(test)` for this crate's own unit tests.
testing = []
## Cross-crate ts-rs TS-binding codegen switch for the HTTP capability/device
## types this crate shares with openasr-server's `/v1/capabilities` and
## `/v1/devices` responses (`BackendKind`, `LanguageCapability`,
## `TranscriptionBackendCapabilities`, `ComputeDevice`, and the realtime
## capability types they pull in transitively). Off by default -- never part
## of a shipped rlib. `cfg(test)` alone (this crate's own mechanism for its
## realtime wire bindings, see `src/realtime/wire_bindings_test.rs`) cannot
## reach across a crate boundary: a dependency's own `[dev-dependencies]`
## (ts-rs included) are never linked into a downstream consumer's build, even
## that consumer's own test binary. A downstream crate's golden regen test
## (e.g. `crates/openasr-server/src/http_wire_bindings_test.rs`) instead
## enables this feature on its `openasr-core` **dev-dependency** edge only,
## so cargo compiles a separate, feature-enabled copy of this crate solely for
## that consumer's test target -- the consumer's real (non-test) library/binary
## build, and every other consumer, still get the plain build with ts-rs
## absent entirely.
ts-export = ["dep:ts-rs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[dependencies]
ed25519-dalek.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
libc.workspace = true
libopus_sys.workspace = true
memmap2.workspace = true
matrixmultiply.workspace = true
rayon.workspace = true
realfft.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
rubato.workspace = true
symphonia.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true
unicode-general-category.workspace = true
zip.workspace = true
# Optional, feature-gated (`ts-export`) real dependency: lets a downstream
# crate's dev-dependency edge (with the feature turned on) see the TS impls
# on the capability/device types below when this crate is compiled as an
# ordinary library dependency of that consumer's test binary -- see the
# `ts-export` feature doc above. Not used by this crate's own build unless
# that feature is enabled; this crate's own tests keep using the unconditional
# dev-dependency entry below via `cfg(test)`.
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"], optional = true }

[build-dependencies]
# Locate the MSVC `cl` toolchain (path + vcvars env) so build.rs can pin it for
# non-HIP Windows ggml builds instead of the ROCm clang that Ninja picks off PATH.
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
metal.workspace = true
objc.workspace = true

[target.'cfg(windows)'.dependencies]
# Probe whether a pull-lock's owning pid is still alive (Win32 OpenProcess), so a
# crashed/killed download's stale lock is reclaimed immediately instead of waiting
# out the 6h mtime timeout. The unix path uses libc::kill; this is its Windows peer.
windows-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
# TS binding codegen for the realtime WebSocket wire types (crate::realtime).
# Dev-only: the derive is gated behind `#[cfg_attr(test, derive(ts_rs::TS))]`
# on the wire structs, so this never becomes part of the shipped rlib -- it
# only participates in `cargo test` builds, where the golden regen test lives.
# `no-serde-warnings`: our `#[serde(transparent)]` newtype ids (RealtimeSessionId
# et al.) hit a ts-rs diagnostic ("failed to parse serde attribute: transparent")
# even though ts-rs's own newtype-unwrap convention already produces the
# correct `export type X = string` output for them regardless of the
# attribute; the warning is pure proc-macro noise and would otherwise trip
# `cargo clippy --all-targets -- -D warnings`.
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }
