[package]
name = "openasr-server"
description = "Local OpenAI-compatible HTTP API server for OpenASR, including device pairing and optional remote-compute delegation."
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[features]
## Accelerator backends — forwarded 1:1 to openasr-core so `serve --backend
## native` can run on GPU when the binary is built with the matching feature.
cuda = ["openasr-core/cuda"]
vulkan = ["openasr-core/vulkan"]
hip = ["openasr-core/hip"]
sycl = ["openasr-core/sycl"]
openmp = ["openasr-core/openmp"]
native = ["openasr-core/native"]

[dependencies]
anyhow.workspace = true
axum.workspace = true
futures-util.workspace = true
getrandom.workspace = true
mime.workspace = true
openasr-core.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
# Enable the `testing` fixtures, and (for this crate's HTTP wire golden test
# only) openasr-core's `ts-export` feature. `cfg(test)` inside openasr-core
# itself would only fire when openasr-core is compiled as *its own* test
# target, not when it is linked as an ordinary library dependency of this
# crate's test binary -- see openasr-core's Cargo.toml comment on
# `ts-export` for why a feature flag is the mechanism instead. This edge is
# the only place that turns it on: openasr-core's real build, and every
# other consumer, never see ts-rs.
openasr-core = { workspace = true, features = ["testing", "ts-export"] }
tokio-tungstenite.workspace = true
tower.workspace = true
# TS binding codegen for the `/health` / `/v1/models` / `/v1/capabilities` /
# `/v1/devices` HTTP response wire types (see `src/http_wire_bindings_test.rs`).
# Dev-only: the derive is gated behind `#[cfg_attr(test, derive(ts_rs::TS))]`
# on the response structs, so this never becomes part of the shipped rlib --
# it only participates in `cargo test` builds. `no-serde-warnings` matches
# openasr-core's own use of this dependency (see its Cargo.toml comment).
ts-rs = { version = "12.0.1", features = ["no-serde-warnings"] }
